--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   sqflite: ^2.4.1
   path: ^1.9.0
+  connectivity_plus: ^6.1.2
 
 dev_dependencies:
   flutter_test:
